fix search alignment

--- a/P1/style.css
+++ b/P1/style.css
@@ -25,6 +25,10 @@ html {
     overflow-x: hidden;
 }
 
+.form-control {
+    width: auto !important;
+}
+
 .container-fluid{
     margin-right: 70px; 
 }
